[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
python-dotenv = "^1.0.1"
isort = "^5.13.2"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langchain-community = "^0.3.7"
langgraph = "^0.2.50"
grandalf = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
